# credit-risk

./: .gitignore  README.md  filter_loan.py  pyproject.toml
models/: pd_model.sav
notebooks/: 01_load_data_creditrisk_preprocessing_pd.ipynb  02_loaddata_creditrisk_pd_scorecard_cutoff.ipynb  credit-risk-modeling-moni.ipynb  credit_risk_model.ipynb
src/: utils.py
